--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <p class="lead"></p>
           </div>
           <div class="col-md-7">
-            <img class="featurette-image img-fluid mx-auto" src="images/class9 3.Jpg" alt="class birthday ceremony">
+            <img class="featurette-image img-fluid mx-auto" src="images/class9 3.jpg" alt="class birthday ceremony">
           </div>
         </div>
 
